fixed illustration spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -13042,6 +13042,10 @@ video {
   width: 24rem;
 }
 
+.w-128 {
+  width: 32rem;
+}
+
 .w-auto {
   width: auto;
 }
@@ -28559,6 +28563,10 @@ video {
     width: 24rem;
   }
 
+  .xsm\:w-128 {
+    width: 32rem;
+  }
+
   .xsm\:w-auto {
     width: auto;
   }
@@ -44031,6 +44039,10 @@ video {
 
   .sm\:w-96 {
     width: 24rem;
+  }
+
+  .sm\:w-128 {
+    width: 32rem;
   }
 
   .sm\:w-auto {
@@ -59507,6 +59519,10 @@ video {
     width: 24rem;
   }
 
+  .md\:w-128 {
+    width: 32rem;
+  }
+
   .md\:w-auto {
     width: auto;
   }
@@ -74979,6 +74995,10 @@ video {
 
   .lg\:w-96 {
     width: 24rem;
+  }
+
+  .lg\:w-128 {
+    width: 32rem;
   }
 
   .lg\:w-auto {
